fix quick chat overflow bug

--- a/client/src/features/quick-chat/pages/QuickChat.module.css
+++ b/client/src/features/quick-chat/pages/QuickChat.module.css
@@ -15,4 +15,5 @@
 
 .chat__window {
     grid-area: chat-window;
+    overflow: hidden;
 }
